[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "discord.py"
description = "A Python wrapper for the Discord API"
readme = { file = "README.rst", content-type = "text/x-rst" }
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "Rapptz" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dynamic = ["version", "dependencies"]

[project.urls]
Documentation = "https://discordpy.readthedocs.io/en/latest/"
"Issue tracker" = "https://github.com/Rapptz/discord.py/issues"

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[project.optional-dependencies]
voice = ["PyNaCl>=1.5.0,<1.6"]
docs = [
    "sphinx==7.4.7",
    "sphinxcontrib_trio==1.1.2",
    "sphinxcontrib-websupport==2.0.0",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "typing-extensions>=4.3,<5",
    "sphinx-inline-tabs==2025.12.21.14",
]
speed = [
    "orjson>=3.11.5",
    "aiodns>=3.6.1; sys_platform != 'win32'",
    "Brotli",
    "zstandard>=0.25.0; python_version <= '3.13'"
]
test = [
    "coverage[toml]==7.13.1",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "pytest-mock==3.15.1",
    "typing-extensions>=4.3,<5",
    "tzdata>=2025.3; sys_platform == 'win32'",
]
dev = [
    "ruff==0.14.10",
    "typing_extensions>=4.3,<5",
]

[tool.setuptools]
packages = [
    "discord",
    "discord.types",
    "discord.ui",
    "discord.webhook",
    "discord.app_commands",
    "discord.ext.commands",
    "discord.ext.tasks",
]
include-package-data = true

[tool.black]
line-length = 125
skip-string-normalization = true

[tool.ruff]
line-length = 125

[tool.ruff.format]
line-ending = "lf"
quote-style = "single"

[tool.coverage.run]
omit = [
    "discord/__main__.py",
    "discord/types/*",
    "*/_types.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
]

[tool.isort]
profile = "black"
combine_as_imports = true
combine_star = true
line_length = 125

[tool.pyright]
include = [
    "discord",
    "discord/app_commands",
    "discord/types",
    "discord/ui",
    "discord/ext",
    "discord/ext/commands",
    "discord/ext/tasks",
]
exclude = [
    "**/__pycache__",
    "build",
    "dist",
    "docs",
]
reportUnnecessaryTypeIgnoreComment = "warning"
reportUnusedImport = "error"
pythonVersion = "3.10"
typeCheckingMode = "basic"

[tool.pytest.ini_options]
asyncio_mode = "strict"
